--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.flowpodcast"
+        applicationId "com.example.driverlearningvideos"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -38,7 +38,6 @@ android {
 dependencies {
 
     implementation 'io.insert-koin:koin-android:3.1.2'
-//    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
